objects/Use_Case__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>QA member that will test (manually or automatically) the test.</description>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automated_Date__c</fullName>
        <label>Automated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRT_Test_Robot_Name__c</fullName>
        <label>CRT Test Robot Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Given__c</fullName>
        <label>Given</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Copado Module</inlineHelpText>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Use Cases</relationshipLabel>
        <relationshipName>Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Definition</fullName>
                    <default>true</default>
                    <label>In Definition</label>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
                <value>
                    <fullName>Test In Progress</fullName>
                </value>
                <value>
                    <fullName>Manually Tested</fullName>
                </value>
                <value>
                    <fullName>Automatically Tested</fullName>
                </value>
                <value>
                    <fullName>Partially Automated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Notes__c</fullName>
        <label>Technical Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Then__c</fullName>
        <label>Then</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type_of_Test__c</fullName>
        <inlineHelpText>Select one or more types of tests for this Use Case</inlineHelpText>
        <label>Type of Test</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Unit Tests</fullName>
                </value>
                <value>
                    <fullName>Functional Apex</fullName>
                </value>
                <value>
                    <fullName>UI Webdriver</fullName>
                </value>
                <value>
                    <fullName>Backend Unit Test</fullName>
                </value>
                <value>
                    <fullName>Functional Backend (new arch)</fullName>
                    <label>Functional Backend (new arch + Wiggum)</label>
                </value>
                <value>
                    <fullName>Backend System (Moe)</fullName>
                </value>
                <value>
                    <fullName>CRT - UI</fullName>
                </value>
                <value>
                    <fullName>CRT - Backend (API)</fullName>
                </value>
                <value>
                    <fullName>CRT - Python</fullName>
                </value>
                <value>
                    <fullName>CRT - CI-CD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Use Cases</relationshipLabel>
        <relationshipName>Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <label>When</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Use Case</label>
    <listViews>
        <fullName>ADD_Use_Cases</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Test__c</columns>
        <columns>Assignee__c</columns>
        <columns>Technical_Notes__c</columns>
        <columns>User_Story__c</columns>
        <columns>Given__c</columns>
        <columns>When__c</columns>
        <columns>Then__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>contains</operation>
            <value>add</value>
        </filters>
        <label>ADD Use Cases</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Use_Cases</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Test__c</columns>
        <columns>Assignee__c</columns>
        <columns>Technical_Notes__c</columns>
        <columns>User_Story__c</columns>
        <columns>Given__c</columns>
        <columns>When__c</columns>
        <columns>Then__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Use Cases</label>
    </listViews>
    <listViews>
        <fullName>Apex_Functional_Tests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assignee__c</columns>
        <columns>Technical_Notes__c</columns>
        <columns>User_Story__c</columns>
        <columns>Module__c</columns>
        <columns>Given__c</columns>
        <columns>When__c</columns>
        <columns>Then__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Test__c</field>
            <operation>equals</operation>
            <value>Functional Apex</value>
        </filters>
        <label>Apex Functional Tests</label>
    </listViews>
    <listViews>
        <fullName>Apex_Tests</fullName>
        <columns>NAME</columns>
        <columns>Assignee__c</columns>
        <columns>Module__c</columns>
        <columns>Status__c</columns>
        <columns>Technical_Notes__c</columns>
        <columns>User_Story__c</columns>
        <columns>Given__c</columns>
        <columns>When__c</columns>
        <columns>Then__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Test__c</field>
            <operation>equals</operation>
            <value>Apex Unit Tests</value>
        </filters>
        <label>Apex Unit Tests</label>
    </listViews>
    <listViews>
        <fullName>CCH</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assignee__c</columns>
        <columns>User_Story__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>contains</operation>
            <value>compliance</value>
        </filters>
        <label>CCH Use Cases</label>
    </listViews>
    <listViews>
        <fullName>Easy_Squad_Copado_DX_Use_Cases1</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Given__c</columns>
        <columns>When__c</columns>
        <columns>Then__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Test__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Create package</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>douglas,alberto</value>
        </filters>
        <label>Easy Squad - Copado DX Use Cases</label>
    </listViews>
    <listViews>
        <fullName>Environment_Variables</fullName>
        <columns>NAME</columns>
        <columns>User_Story__c</columns>
        <columns>Module__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>environmentalvariables,env var,environment variables</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>lex</value>
        </filters>
        <label>Environment Variables</label>
    </listViews>
    <listViews>
        <fullName>Moe_Tests</fullName>
        <columns>NAME</columns>
        <columns>Assignee__c</columns>
        <columns>Module__c</columns>
        <columns>Status__c</columns>
        <columns>Technical_Notes__c</columns>
        <columns>User_Story__c</columns>
        <columns>Given__c</columns>
        <columns>When__c</columns>
        <columns>Then__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Test__c</field>
            <operation>equals</operation>
            <value>Backend System (Moe)</value>
        </filters>
        <label>Moe Tests</label>
    </listViews>
    <listViews>
        <fullName>PMD_UCs</fullName>
        <columns>NAME</columns>
        <columns>Given__c</columns>
        <columns>When__c</columns>
        <columns>Then__c</columns>
        <columns>Module__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>PMD</value>
        </filters>
        <label>PMD UCs</label>
    </listViews>
    <listViews>
        <fullName>Rollback</fullName>
        <columns>User_Story__c</columns>
        <columns>NAME</columns>
        <columns>Given__c</columns>
        <columns>When__c</columns>
        <columns>Then__c</columns>
        <columns>Technical_Notes__c</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Test__c</columns>
        <columns>Module__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Rollback</value>
        </filters>
        <label>Rollback</label>
    </listViews>
    <listViews>
        <fullName>VSM_Use_Cases</fullName>
        <columns>NAME</columns>
        <columns>Assignee__c</columns>
        <columns>Module__c</columns>
        <columns>Status__c</columns>
        <columns>Technical_Notes__c</columns>
        <columns>User_Story__c</columns>
        <columns>Given__c</columns>
        <columns>When__c</columns>
        <columns>Then__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>contains</operation>
            <value>360,vsm</value>
        </filters>
        <label>VSM Use Cases</label>
    </listViews>
    <nameField>
        <label>Use Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>